--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.28.1",
     "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -22,7 +23,7 @@
     "multer": "^1.4.2",
     "mysql2": "^2.2.5",
     "nodemailer": "^6.6.3",
-    "pg": "^8.7.3",
+    "pg": "^8.7.1",
     "rupiah-format": "^1.0.0",
     "sequelize": "^6.6.4",
     "sequelize-cli": "^6.2.0",
